# learn-gtest

./: CMakeLists.txt
test/: test_case.cpp  test_main.cpp
